assets/thanos-querier/route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/description: Expose the `/api` endpoints of the `thanos-querier` service via a router.
  labels:
    app.kubernetes.io/component: query-layer
    app.kubernetes.io/instance: thanos-querier
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: thanos-query
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 0.42.2
  name: thanos-querier
  namespace: openshift-monitoring
spec:
  path: /api
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: thanos-querier
