assets/thanos-querier/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: thanos-querier
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9091
      protocol: TCP
    - port: 9092
      protocol: TCP
    - port: 9093
      protocol: TCP
    - port: 9094
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-query
  policyTypes:
  - Ingress
  - Egress
