assets/thanos-querier/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: thanos-querier-access
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - endPort: "9094"
      port: "9091"
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-query
  policyTypes:
  - Ingress
  - Egress
